// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a lambda code deploy app 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\"
    }
  },
  \\"resource\\": {
    \\"aws_codedeploy_app\\": {
      \\"test-lambda-code-deploy_code-deploy-app_A7640CFE\\": {
        \\"compute_platform\\": \\"Lambda\\",
        \\"name\\": \\"Test-Lambda-Code-Deploy-Lambda\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda-code-deploy/code-deploy-app\\",
            \\"uniqueId\\": \\"test-lambda-code-deploy_code-deploy-app_A7640CFE\\"
          }
        }
      }
    },
    \\"aws_iam_role\\": {
      \\"test-lambda-code-deploy_code-deploy-role_9DA8B07C\\": {
        \\"assume_role_policy\\": \\"\${data.aws_iam_policy_document.test-lambda-code-deploy_code-deploy-assume-role-policy-document_484EBB89.json}\\",
        \\"name\\": \\"Test-Lambda-Code-Deploy-CodeDeployRole\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda-code-deploy/code-deploy-role\\",
            \\"uniqueId\\": \\"test-lambda-code-deploy_code-deploy-role_9DA8B07C\\"
          }
        }
      }
    },
    \\"aws_iam_role_policy_attachment\\": {
      \\"test-lambda-code-deploy_code-deploy-policy-attachment_84E423E0\\": {
        \\"policy_arn\\": \\"arn:aws:iam::aws:policy/service-role/AWSCodeDeployRoleForLambda\\",
        \\"role\\": \\"Test-Lambda-Code-Deploy-CodeDeployRole\\",
        \\"depends_on\\": [
          \\"aws_iam_role.test-lambda-code-deploy_code-deploy-role_9DA8B07C\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda-code-deploy/code-deploy-policy-attachment\\",
            \\"uniqueId\\": \\"test-lambda-code-deploy_code-deploy-policy-attachment_84E423E0\\"
          }
        }
      }
    },
    \\"aws_codedeploy_deployment_group\\": {
      \\"test-lambda-code-deploy_code-deployment-group_3F73EBCE\\": {
        \\"app_name\\": \\"Test-Lambda-Code-Deploy-Lambda\\",
        \\"deployment_config_name\\": \\"CodeDeployDefault.LambdaAllAtOnce\\",
        \\"deployment_group_name\\": \\"Test-Lambda-Code-Deploy-Lambda\\",
        \\"service_role_arn\\": \\"\${aws_iam_role.test-lambda-code-deploy_code-deploy-role_9DA8B07C.arn}\\",
        \\"auto_rollback_configuration\\": [
          {
            \\"enabled\\": true,
            \\"events\\": [
              \\"DEPLOYMENT_FAILURE\\"
            ]
          }
        ],
        \\"deployment_style\\": [
          {
            \\"deploymentType\\": \\"BLUE_GREEN\\",
            \\"deploymentOption\\": \\"WITH_TRAFFIC_CONTROL\\"
          }
        ],
        \\"depends_on\\": [
          \\"aws_codedeploy_app.test-lambda-code-deploy_code-deploy-app_A7640CFE\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda-code-deploy/code-deployment-group\\",
            \\"uniqueId\\": \\"test-lambda-code-deploy_code-deployment-group_3F73EBCE\\"
          }
        }
      }
    }
  },
  \\"data\\": {
    \\"aws_iam_policy_document\\": {
      \\"test-lambda-code-deploy_code-deploy-assume-role-policy-document_484EBB89\\": {
        \\"statement\\": [
          {
            \\"effect\\": \\"Allow\\",
            \\"actions\\": [
              \\"sts:AssumeRole\\"
            ],
            \\"principals\\": [
              {
                \\"identifiers\\": [
                  \\"codedeploy.amazonaws.com\\"
                ],
                \\"type\\": \\"Service\\"
              }
            ]
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda-code-deploy/code-deploy-assume-role-policy-document\\",
            \\"uniqueId\\": \\"test-lambda-code-deploy_code-deploy-assume-role-policy-document_484EBB89\\"
          }
        }
      }
    }
  }
}"
`;

exports[`renders a lambda code deploy app with sns topic arn 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\"
    }
  },
  \\"resource\\": {
    \\"aws_codedeploy_app\\": {
      \\"test-lambda-code-deploy_code-deploy-app_A7640CFE\\": {
        \\"compute_platform\\": \\"Lambda\\",
        \\"name\\": \\"Test-Lambda-Code-Deploy-Lambda\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda-code-deploy/code-deploy-app\\",
            \\"uniqueId\\": \\"test-lambda-code-deploy_code-deploy-app_A7640CFE\\"
          }
        }
      }
    },
    \\"aws_iam_role\\": {
      \\"test-lambda-code-deploy_code-deploy-role_9DA8B07C\\": {
        \\"assume_role_policy\\": \\"\${data.aws_iam_policy_document.test-lambda-code-deploy_code-deploy-assume-role-policy-document_484EBB89.json}\\",
        \\"name\\": \\"Test-Lambda-Code-Deploy-CodeDeployRole\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda-code-deploy/code-deploy-role\\",
            \\"uniqueId\\": \\"test-lambda-code-deploy_code-deploy-role_9DA8B07C\\"
          }
        }
      }
    },
    \\"aws_iam_role_policy_attachment\\": {
      \\"test-lambda-code-deploy_code-deploy-policy-attachment_84E423E0\\": {
        \\"policy_arn\\": \\"arn:aws:iam::aws:policy/service-role/AWSCodeDeployRoleForLambda\\",
        \\"role\\": \\"Test-Lambda-Code-Deploy-CodeDeployRole\\",
        \\"depends_on\\": [
          \\"aws_iam_role.test-lambda-code-deploy_code-deploy-role_9DA8B07C\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda-code-deploy/code-deploy-policy-attachment\\",
            \\"uniqueId\\": \\"test-lambda-code-deploy_code-deploy-policy-attachment_84E423E0\\"
          }
        }
      }
    },
    \\"aws_codedeploy_deployment_group\\": {
      \\"test-lambda-code-deploy_code-deployment-group_3F73EBCE\\": {
        \\"app_name\\": \\"Test-Lambda-Code-Deploy-Lambda\\",
        \\"deployment_config_name\\": \\"CodeDeployDefault.LambdaAllAtOnce\\",
        \\"deployment_group_name\\": \\"Test-Lambda-Code-Deploy-Lambda\\",
        \\"service_role_arn\\": \\"\${aws_iam_role.test-lambda-code-deploy_code-deploy-role_9DA8B07C.arn}\\",
        \\"auto_rollback_configuration\\": [
          {
            \\"enabled\\": true,
            \\"events\\": [
              \\"DEPLOYMENT_FAILURE\\"
            ]
          }
        ],
        \\"deployment_style\\": [
          {
            \\"deploymentType\\": \\"BLUE_GREEN\\",
            \\"deploymentOption\\": \\"WITH_TRAFFIC_CONTROL\\"
          }
        ],
        \\"depends_on\\": [
          \\"aws_codedeploy_app.test-lambda-code-deploy_code-deploy-app_A7640CFE\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda-code-deploy/code-deployment-group\\",
            \\"uniqueId\\": \\"test-lambda-code-deploy_code-deployment-group_3F73EBCE\\"
          }
        }
      }
    },
    \\"aws_codestarnotifications_notification_rule\\": {
      \\"test-lambda-code-deploy_notifications_7F614EE2\\": {
        \\"detail_type\\": \\"BASIC\\",
        \\"event_type_ids\\": [
          \\"codedeploy-application-deployment-failed\\"
        ],
        \\"name\\": \\"Test-Lambda-Code-Deploy-Lambda\\",
        \\"resource\\": \\"arn:aws:codedeploy:us-east-1:123:application:Test-Lambda-Code-Deploy-Lambda\\",
        \\"target\\": [
          {
            \\"address\\": \\"test:deploy-topic:arn\\"
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda-code-deploy/notifications\\",
            \\"uniqueId\\": \\"test-lambda-code-deploy_notifications_7F614EE2\\"
          }
        }
      }
    }
  },
  \\"data\\": {
    \\"aws_iam_policy_document\\": {
      \\"test-lambda-code-deploy_code-deploy-assume-role-policy-document_484EBB89\\": {
        \\"statement\\": [
          {
            \\"effect\\": \\"Allow\\",
            \\"actions\\": [
              \\"sts:AssumeRole\\"
            ],
            \\"principals\\": [
              {
                \\"identifiers\\": [
                  \\"codedeploy.amazonaws.com\\"
                ],
                \\"type\\": \\"Service\\"
              }
            ]
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda-code-deploy/code-deploy-assume-role-policy-document\\",
            \\"uniqueId\\": \\"test-lambda-code-deploy_code-deploy-assume-role-policy-document_484EBB89\\"
          }
        }
      }
    }
  }
}"
`;

exports[`renders a lambda code deploy app with sns topic arn and detail type 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\"
    }
  },
  \\"resource\\": {
    \\"aws_codedeploy_app\\": {
      \\"test-lambda-code-deploy_code-deploy-app_A7640CFE\\": {
        \\"compute_platform\\": \\"Lambda\\",
        \\"name\\": \\"Test-Lambda-Code-Deploy-Lambda\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda-code-deploy/code-deploy-app\\",
            \\"uniqueId\\": \\"test-lambda-code-deploy_code-deploy-app_A7640CFE\\"
          }
        }
      }
    },
    \\"aws_iam_role\\": {
      \\"test-lambda-code-deploy_code-deploy-role_9DA8B07C\\": {
        \\"assume_role_policy\\": \\"\${data.aws_iam_policy_document.test-lambda-code-deploy_code-deploy-assume-role-policy-document_484EBB89.json}\\",
        \\"name\\": \\"Test-Lambda-Code-Deploy-CodeDeployRole\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda-code-deploy/code-deploy-role\\",
            \\"uniqueId\\": \\"test-lambda-code-deploy_code-deploy-role_9DA8B07C\\"
          }
        }
      }
    },
    \\"aws_iam_role_policy_attachment\\": {
      \\"test-lambda-code-deploy_code-deploy-policy-attachment_84E423E0\\": {
        \\"policy_arn\\": \\"arn:aws:iam::aws:policy/service-role/AWSCodeDeployRoleForLambda\\",
        \\"role\\": \\"Test-Lambda-Code-Deploy-CodeDeployRole\\",
        \\"depends_on\\": [
          \\"aws_iam_role.test-lambda-code-deploy_code-deploy-role_9DA8B07C\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda-code-deploy/code-deploy-policy-attachment\\",
            \\"uniqueId\\": \\"test-lambda-code-deploy_code-deploy-policy-attachment_84E423E0\\"
          }
        }
      }
    },
    \\"aws_codedeploy_deployment_group\\": {
      \\"test-lambda-code-deploy_code-deployment-group_3F73EBCE\\": {
        \\"app_name\\": \\"Test-Lambda-Code-Deploy-Lambda\\",
        \\"deployment_config_name\\": \\"CodeDeployDefault.LambdaAllAtOnce\\",
        \\"deployment_group_name\\": \\"Test-Lambda-Code-Deploy-Lambda\\",
        \\"service_role_arn\\": \\"\${aws_iam_role.test-lambda-code-deploy_code-deploy-role_9DA8B07C.arn}\\",
        \\"auto_rollback_configuration\\": [
          {
            \\"enabled\\": true,
            \\"events\\": [
              \\"DEPLOYMENT_FAILURE\\"
            ]
          }
        ],
        \\"deployment_style\\": [
          {
            \\"deploymentType\\": \\"BLUE_GREEN\\",
            \\"deploymentOption\\": \\"WITH_TRAFFIC_CONTROL\\"
          }
        ],
        \\"depends_on\\": [
          \\"aws_codedeploy_app.test-lambda-code-deploy_code-deploy-app_A7640CFE\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda-code-deploy/code-deployment-group\\",
            \\"uniqueId\\": \\"test-lambda-code-deploy_code-deployment-group_3F73EBCE\\"
          }
        }
      }
    },
    \\"aws_codestarnotifications_notification_rule\\": {
      \\"test-lambda-code-deploy_notifications_7F614EE2\\": {
        \\"detail_type\\": \\"FULL\\",
        \\"event_type_ids\\": [
          \\"codedeploy-application-deployment-failed\\"
        ],
        \\"name\\": \\"Test-Lambda-Code-Deploy-Lambda\\",
        \\"resource\\": \\"arn:aws:codedeploy:us-east-1:123:application:Test-Lambda-Code-Deploy-Lambda\\",
        \\"target\\": [
          {
            \\"address\\": \\"test:deploy-topic:arn\\"
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda-code-deploy/notifications\\",
            \\"uniqueId\\": \\"test-lambda-code-deploy_notifications_7F614EE2\\"
          }
        }
      }
    }
  },
  \\"data\\": {
    \\"aws_iam_policy_document\\": {
      \\"test-lambda-code-deploy_code-deploy-assume-role-policy-document_484EBB89\\": {
        \\"statement\\": [
          {
            \\"effect\\": \\"Allow\\",
            \\"actions\\": [
              \\"sts:AssumeRole\\"
            ],
            \\"principals\\": [
              {
                \\"identifiers\\": [
                  \\"codedeploy.amazonaws.com\\"
                ],
                \\"type\\": \\"Service\\"
              }
            ]
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda-code-deploy/code-deploy-assume-role-policy-document\\",
            \\"uniqueId\\": \\"test-lambda-code-deploy_code-deploy-assume-role-policy-document_484EBB89\\"
          }
        }
      }
    }
  }
}"
`;
